打通前端学情分析，暂未存入数据库